# iced-matrix-client

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml  rustfmt.toml
src/: app.rs  components.rs  extensions.rs  macros.rs  main.rs  styling.rs  tasks.rs  util.rs
src/modal/: mod.rs  settings.rs  verification.rs
src/modals/: mod.rs  settings.rs
src/page/: login.rs  mod.rs
src/page/chat/: components.rs  message.rs  mod.rs
src/pages/: login.rs  mod.rs
src/pages/chat/: components.rs  mod.rs
src/worker/: avatars.rs  messages.rs  mod.rs  sliding_sync.rs  verification.rs
